--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_sqlview">sqlview</string>
     <string name="title_activity_sqldb">sqldb</string>
     <string name="title_activity_settings">settings</string>
+    <string name="title_activity_blooddb">blooddb</string>
 
 </resources>
