--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="title_activity_settings">settings</string>
     <string name="title_activity_blooddb">blooddb</string>
     <string name="title_activity_view_blood">ViewBlood</string>
+    <string name="title_activity_addmember">addmember</string>
 
 </resources>
