--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,14 +13,13 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_blooddb">blooddb</string>
     <string name="dummy_title"></string>
-    <string name="choose">Blood Group</string>
     <string name="title_activity_view_blood">DATABASE</string>
     <string name="title_activity_addmember">Add Entry</string>
     <string name="title_activity_edit_entry">Edit Entry</string>
     <string name="blood_group_spinner_title">Select Blood Group</string>
 
     <string-array name="blood_groups">
-        <!--<item>All</item>-->
+        <item>All</item>
         <item>A+</item>
         <item>A-</item>
         <item>B+</item>
