--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="title_activity_blooddb">blooddb</string>
     <string name="dummy_title"></string>
     <string name="choose_blood">Blood Group</string>
+    <string name="number_of_months">Months b/w Donation</string>
+    <string name="pref_months">number_of_months</string>
+
     <string name="donation_date">Last Donation</string>
     <string name="title_activity_view_blood">DATABASE</string>
     <string name="title_activity_addmember">Add Entry</string>
