--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,13 @@
     <string name="dummy_title"></string>
     <string name="choose_blood">Blood Group</string>
     <string name="number_of_months">Months b/w Donation</string>
+
+
     <string name="pref_months">number_of_months</string>
     <string name="pref_user_name">Username</string>
     <string name="pref_pass_word">Password</string>
     <string name="pref_is_user">User_exist</string>
+    <string name="pref_is_admin">is_admin</string>
 
     <string name="donation_date">Last Donation</string>
     <string name="title_activity_view_blood">DATABASE</string>
